--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ version: 1.0.12
 homepage: https://github.com/loloof64/chess_vectors_flutter
 
 environment:
-    sdk: ">=2.1.0 <3.0.0"
+    sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  tuple: ^1.0.2
+  tuple: ^2.0.0
 
 dev_dependencies:
   flutter_test:
